定义接口
