# docs/swagger.yaml
@@ -1,10 +1,138 @@
+definitions:
+  directory.GetDirectoryResponse:
+    type: object
+  directory.GetFileResponse:
+    type: object
+  directory.GetInfoResponse:
+    type: object
+  file.GetInfoResponse:
+    type: object
+  http.ProblemDetails:
+    properties:
+      detail:
+        example: a error detail
+        format: string
+        type: string
+      instance:
+        example: /api/to/path
+        format: string
+        type: string
+      status:
+        example: 400
+        format: int
+        type: integer
+      title:
+        example: a error title
+        format: string
+        type: string
+    type: object
 info:
   contact: {}
   description: DDD-based file storage management project built with Gin.
   title: Power File Storage API
   version: "1.0"
 paths:
-  /api/fs/file/{id}:
+  /api/fs/directories/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 目录id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/directory.GetInfoResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/http.ProblemDetails'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/http.ProblemDetails'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/http.ProblemDetails'
+      summary: 获取目录详细信息
+      tags:
+      - directories
+  /api/fs/directories/{id}/directories:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 目录id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/directory.GetDirectoryResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/http.ProblemDetails'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/http.ProblemDetails'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/http.ProblemDetails'
+      summary: 获取指定目录下一层级的目录列表
+      tags:
+      - directories
+  /api/fs/directories/{id}/files:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 目录id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/directory.GetFileResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/http.ProblemDetails'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/http.ProblemDetails'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/http.ProblemDetails'
+      summary: 获取指定目录下一层级的文件列表
+      tags:
+      - directories
+  /api/fs/files/{id}:
     get:
       consumes:
       - application/json
@@ -20,19 +148,19 @@ paths:
         "200":
           description: OK
           schema:
-            type: object
+            $ref: '#/definitions/file.GetInfoResponse'
         "400":
           description: Bad Request
           schema:
-            type: object
+            $ref: '#/definitions/http.ProblemDetails'
         "404":
           description: Not Found
           schema:
-            type: object
+            $ref: '#/definitions/http.ProblemDetails'
         "500":
           description: Internal Server Error
           schema:
-            type: object
+            $ref: '#/definitions/http.ProblemDetails'
       summary: 获取文件详细信息
       tags:
       - files
